# Polymarket-Terminal

./: .env  Cargo.toml  Readme.md  example.json  out.txt
src/: main.rs  ui.rs  ui_old.rs
src/actions/: approvals.rs  buy.rs  mod.rs  wallet_info.rs
src/data/: get_market.rs  mod.rs  new_markets.rs  state.rs  types.rs  ws.rs
src/ui/: app.rs  mod.rs  runner.rs
src/ui/pages/: dashboard.rs  detail.rs  mod.rs  wallet.rs
