[package]
name = "pmterm"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_path_to_error = "0.1"